--- a/css/breakpoints/_base.scss
+++ b/css/breakpoints/_base.scss
@@ -51,6 +51,14 @@ img {
   max-width: 100%;
   vertical-align: bottom;
 }
+.btn {
+  display: block;
+  border: none;
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
 .font-xs {
   font-size: 10px;
 }
@@ -424,15 +432,18 @@ html: blog.html（詳細ページ）
       &__inner {
         flex-basis: none; //ブログ一覧の場合のみ適用他はnone
         color: #111;
-        & > p,
-        & > img {
+        & p,
+        & img {
           @extend .mb-md;
+        }
+        & img {
+          width: 100%;
+          height: auto;
+          object-fit: cover;
         }
       }
       &__date {
         margin-right: 10px;
-      }
-      &__category {
       }
     }
   }
@@ -442,12 +453,12 @@ html: blog.html（詳細ページ）
       @extend .mb-md;
     }
 
-    &__link {
+    &__list > li {
       position: relative;
       padding-left: 15px;
-      &::before {
+      & > a::before {
         position: absolute;
-        top: 10px;
+        top: 11px;
         left: 0;
         width: 10px;
         height: 1px;
@@ -456,7 +467,7 @@ html: blog.html（詳細ページ）
         background-color: $cBlack;
         transition: background-color 0.5s;
       }
-      &:hover::before {
+      & > a:hover::before {
         background-color: $choverColor !important;
       }
     }
@@ -536,6 +547,127 @@ html: about.html（プロフページ）
   &__link {
     & > i {
       padding-right: 10px;
+    }
+  }
+}
+
+/******************************************************************
+
+html: contact.html（お問い合わせページ）
+
+******************************************************************/
+.form-style {
+  padding: 5px;
+  border: none;
+  background-color: $cLightGray;
+}
+.contact-content {
+  @extend .content-width;
+  @extend .pd-section;
+
+  .contact {
+    &__inner {
+      display: block;
+      max-width: 600px;
+      margin: 0 auto;
+
+      & > .contact-title {
+        text-align: center;
+        @extend .mb-md;
+      }
+    }
+  }
+}
+
+.form {
+  &__inner {
+    display: block;
+    width: 50%;
+  }
+  &__cont {
+    @extend .mb-sm;
+    @extend .flex;
+    .send-btn {
+      margin: 0 auto;
+      padding: 10px 30px;
+      color: $cWhite;
+      background-color: $cGray;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    .return-btn {
+      border-radius: 15px;
+      padding: 5px 20px;
+      background-color: $cGray;
+      color: $cWhite;
+    }
+  }
+  &__input {
+    flex-basis: 70%;
+    width: 100%;
+    @extend .form-style;
+  }
+  &__textarea {
+    flex-basis: 70%;
+    width: 100%;
+    @extend .form-style;
+  }
+
+  &__label {
+    flex-basis: 30%;
+    display: block;
+    & > span {
+      color: $cWhite;
+      background-color: $cGray;
+      border-radius: 5px;
+      margin-left: 5px;
+      padding: 2px;
+    }
+  }
+}
+/******************************************************************
+
+html: ページネーション
+
+******************************************************************/
+
+.page-nation {
+  text-align: center;
+  @extend .mb-md;
+  & a {
+    border: none;
+    font-family: quasimoda, sans-serif;
+    font-weight: 400;
+    position: relative;
+    display: inline-block;
+    margin: 0 6px;
+    padding: 0 4px 6px;
+    line-height: 1;
+    transition: all 0.3s;
+    font-size: 13px;
+  }
+  & span {
+    font-family: quasimoda, sans-serif;
+    font-weight: 400;
+    position: relative;
+    display: inline-block;
+    margin: 0 6px;
+    padding: 0 2px 6px;
+    line-height: 1;
+    transition: all 0.3s;
+    font-size: 13px;
+    &.current {
+      border: none;
+      &::after {
+        display: block;
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #000;
+      }
     }
   }
 }
